04/ Search-btn color fix, watchlist alignment

--- a/04_movie-search/src/assets/styles/components/_HomeHeader.scss
+++ b/04_movie-search/src/assets/styles/components/_HomeHeader.scss
@@ -36,6 +36,7 @@
     }
 
     &__btn {
+        color: $clr-primary-900;
         background-color: $clr-neutral-300;
         border: 2px solid #D1D5DB;
         font-size: $fs-300;
